Bug 1338059 - Part 2: Implement PromiseRejectionEvent, r=bz

MozReview-Commit-ID: 6BZBL9BjO03